Bundle Oracle Java LSP for build installs